# utilssets

./: .gitignore
env/: config.env
env/config/: env.conf  func.conf  pyenv.conf
env/latex/: md2pdf.tex  pdf.tex
env/vim/: .vimrc  vimrc_bk  vimrc_ycm
scripts/android/: ProcessInfo.py  adb_push.sh  android_cmake.sh  android_env.sh  aosp.sh  app_gradle_build.sh  cp_android.sh  mtk_cpu_gpu_usage.sh  pid.sh  pid_cpu_usage.sh
scripts/darwin/: env.sh
scripts/debian/: kvm.sh  linux_os_relalted.sh  linux_os_related.sh
scripts/docker/: docker_cmd_example.sh  get_container_id.sh
scripts/for_android/: android_env.sh  git_checkout_detach_android.sh  pid.sh
scripts/python/: argparse_example.py  magnet2torrent.py
scripts/shell/: adb_connect.sh  add_user.sh  bk_fk.sh  change_dir.sh  get_sys_info.sh  git_restore.sh  ishadowsocks.sh  killsystemui.sh  linux_os_relalted.sh  log_droid.sh  meminfo.sh  mount_dirs.sh  open_files_count.sh  pid.sh  pst.sh  setprop.sh
scripts/tensorflow/: build.sh  build_android.sh  build_arm64.sh  tensorflow_lite_headers.sh
setup/: env.sh  issues.md  manual_installation  os_type.sh  path.sh  prerequisite_debian.sh  reach_github.sh  setup_android.sh  setup_pyenv.sh  setup_universal-ctags.sh  setup_vim.sh  setup_vim_ycm.sh  setup_wizard.sh  update_fzf.sh  update_git.sh  update_jar.sh  update_pyenv.sh
setup/Darwin/: pyenv_Darwin.sh  vim_Darwin.sh  wizard_Darwin.sh
setup/Linux/: pyenv_Linux.sh  vim_Linux.sh  vim_ycm_Linux.sh  wizard_Linux.sh
setup/env/: env.sh  prerequisite.sh
source/c++/: binary_tree.cpp
source/cmake/: CMakeLists.txt
(+26 files in other folders)
